--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script type="module" src="index.js"></script>
-    <button type="button">Player1:ren</button>
+    <button type="button">Player1:your name</button>
     
 </body>
 </html>
